styles/global/global.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    width: 100%;
    overflow: hidden;
}

body {
    display: flex;
    flex-direction: column;
    background: black;
    color: white;
}

header {
    flex: 0 1 auto;
}

main {
    flex: 1 1 auto;
    padding: 2rem;
}

footer {
    margin-top: auto;
    flex: 0 1 auto;
}

code {
    font-family: 'Roboto Mono', monospace;
    padding: 0.2rem;
    background: gray;
    border-radius: 0.5rem;
}

p {
    padding-block: 0.2rem;
}

a {
    color: orangered;
    font-weight: bold;
    text-decoration: none;
    padding: 0.2rem;
    border-radius: 0.5rem;
}

a:hover {
    color: black;
    background: orangered;
}

